# mini-ode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  example.ipynb
mini-ode/: Cargo.toml  build.rs
mini-ode-python/: Cargo.toml  pyproject.toml
mini-ode-python/py_src/mini_ode/: __init__.py  optimizers.py
mini-ode-python/src/: lib.rs  lib.rs.bak
mini-ode-python/tests/: test_module_attributes.py  test_ode_solving.py  test_optimizer_display.py  test_solver_attributes.py  test_solver_display.py
mini-ode/src/: lib.rs  lib.rs.bak  optimizers.rs
mini-ode/src/tests/: compute_jacobian.rs  mock_optimizer.rs  mod.rs  optimizer_display.rs  optimizers_derivative_tensors_123_helper.rs  optimizers_differentiate_helper.rs  optimizers_gradient_and_hessian_helper.rs  solver_display.rs
