[workspace]
resolver = "2"
members = [
	"mini-ode",
	"mini-ode-python"
]

[workspace.package]
version = "0.1.4"
authors = ["Antoni Michał Przybylik <antoni@taon.io>"]
license = "GPL-2.0"
repository = "https://github.com/antoniprzybylik/mini-ode"
description = "A minimalistic ODE solvers library built on top of PyTorch"
readme = "README.md"

[workspace.lints.clippy]
unwrap_used = "deny"
except_used = "warn"

[profile.release]
lto = true
