[package]
name = "mini-ode-python"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3", "abi3-py312"] }
pyo3-tch = "0.19.0"
tch = "0.19.0"
mini-ode = { path = "../mini-ode" }

[lints]
workspace = true
