[package]
name = "mini-ode-python"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3", "abi3-py313"] }
pyo3-tch = "0.20.0"
tch = "0.20.0"
mini-ode = { path = "../mini-ode" }

[lints]
workspace = true
